--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/router": "^15.0.0",
     "@capacitor/android": "4.7.0",
     "@capacitor/app": "4.1.1",
-    "@capacitor/core": "4.7.0",
+    "@capacitor/core": "^4.7.0",
     "@capacitor/geolocation": "^4.1.0",
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.1",
@@ -45,7 +45,7 @@
     "@angular/compiler": "^15.0.0",
     "@angular/compiler-cli": "^15.0.0",
     "@angular/language-service": "^15.0.0",
-    "@capacitor/cli": "4.7.0",
+    "@capacitor/cli": "^4.7.0",
     "@ionic/angular-toolkit": "^8.0.0",
     "@ionic/lab": "3.2.15",
     "@types/jasmine": "~4.0.0",
